--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="keywords" content=" " />
     <meta name="description" content=" " />
-    <title>Template</title>
-    <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+    <title>Pacific Treasure</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/hpk7lua.css">
     <link rel="stylesheet" href="https://use.typekit.net/cav3utr.css">
