--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="keywords" content=" " />
-    <meta name="description" content=" " />
+    <meta name="keywords" content="ocean foundation, ocean conservancy, protect the ocean, save the ocean, pacific ocean, ocean charity" />
+    <meta name="description" content="Pacific Treasure Foundation was founded to study and protect the Pacific Ocean." />
     <title>Pacific Treasure</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/hpk7lua.css">
     <link rel="stylesheet" href="https://use.typekit.net/cav3utr.css">
-    <script src="https://kit.fontawesome.com/6f4e4362d7.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/6b664b188f.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
 </head>
 
@@ -26,7 +26,7 @@
                     <span class="navbar-toggle" id="js-navbar-toggle">
                         <i class="fas fa-bars"></i>
                     </span>
-                    <a href="#" class="logo">Pacific Treasure Foundation</a>
+                    <img class="logo" src="assets/turtle-logo.svg" alt="Pacific Treasure Foundation">
                         <ul class="main-nav" id="js-menu">
                             <li><a href="#" class="nav-links">About</a></li>
                             <li><a href="#" class="nav-links">What We Do</a></li>
@@ -67,7 +67,7 @@
 
             <!-- Content -->
             <section class="content" id="services">
-                <h2>Making our oceans clean again.</h2>
+                <h2>Let's make our oceans clean again.</h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
@@ -105,8 +105,8 @@
             <!-- Content -->
             <section class="features">
                 <div class="brand-icons">
-                    <i class="fab fa-amazon" style="color: #000;"></i>
-                    <h2>Amazon</h2>
+                    <i class="fas fa-whale" style="color: #000;"></i>
+                    <h2>Protecting Marine Life</h2>
                 </div>
                 <p>
                     Lorem ipsum dolor sit amet. Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -141,7 +141,7 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <h6>Copyright © 2020 Trevor Capozza</h6>
+            <h6>Copyright © 2020 Pacific Treasure</h6>
         </footer>
 
 
