--- a/index.html
+++ b/index.html
@@ -13,79 +13,69 @@
     <link rel="stylesheet" href="https://use.typekit.net/hpk7lua.css">
     <link rel="stylesheet" href="https://use.typekit.net/cav3utr.css">
     <script src="https://kit.fontawesome.com/6b664b188f.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
 </head>
 
 <body>
-
-        <div class="hero-background">
+    <div class="background-img">
 
             <!-- Header -->
             <header class="header">
                 <nav class="navbar">
-                    <span class="navbar-toggle" id="js-navbar-toggle">
-                        <i class="fas fa-bars"></i>
-                    </span>
                     <img class="logo" src="assets/turtle-logo.svg" alt="Pacific Treasure Foundation">
+                        <!--
                         <ul class="main-nav" id="js-menu">
                             <li><a href="#" class="nav-links">About</a></li>
                             <li><a href="#" class="nav-links">What We Do</a></li>
                             <li><a href="#" class="nav-links">Work With Us</a></li>
-                            <!-- <li><a href="#" class="nav-links">Donate</a></li> -->
+                            <li><a href="#" class="nav-links">Donate</a></li>
                         </ul>
+                        -->
                 </nav>
             </header>
 
             <!-- Hero -->
-            <section class="hero wrapper">
-                <!-- <div class="notification">
-                    <p class="status">Updated</p>
-                    <p class="message">Add text here <span style="color: white;">for a cool</span> notification</p>
-                </div> -->
+            <div class="hero wrapper">
                 <div class="hero-text">
-                    <h1>Protecting the Pacific Ocean</h1>    
+                    <h1>Innovative and sustainable solutions for our Pacific Ocean.</h1> 
+                    <p class="intro">Because the ocean needs all of our passion and resources.</p>   
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sumenda potius quam expetenda. Nihil opus est exemplis hoc facere longius.
+                        The Pacific Treasure Foundation lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, distinctio. Eius blanditiis modi nesciunt expedita. Perferendis blanditiis aliquam sequi repellendus, dolore itaque magnam vel cupiditate sunt ab maxime illum quae.
                     </p>
                 </div>
-                <div class="buttons">
-                <a href="#" class="cta cta-primary">Make a Donation</a>
-                <!-- <a href="#" class="cta cta-secondary">Secondary Button</a> -->
-                </div>
-            </header>
 
-        </div>
+                <!-- 
+                <div class="buttons">
+                    <a href="#" class="cta cta-primary">Make a Donation</a>
+                    <a href="#" class="cta cta-secondary">Secondary Button</a>
+                </div>
+                -->
+
+            </div>
+    </div>
 
     <div class="section-one">
-
         <div class="flex-container wrapper">
-
-            <!-- Sidebar -->
+            <!-- Image -->
             <section class="sidebar">
-                <img class="covid" src="assets/trash.jpg" alt="Ocean Trash">
+                <img class="trash" src="assets/trash.svg" alt="Ocean Trash">
             </section>
 
             <!-- Content -->
             <section class="content" id="services">
-                <h2>Let's make our oceans clean again.</h2>
+                <h2>Fighting to keep our oceans clean.</h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </section>
-
         </div>
-
     </div>
 
     <div class="section-two">
-
-        <div class="flex-container wrapper">
-            
-            <!-- Sidebar -->
+        <div class="flex-container wrapper">  
+            <!-- Image -->
             <section class="sidebar">
-                <img class="covid" src="assets/beer.svg" alt="Cheers!">
+                <img class="covid" src="assets/trash.svg" alt="Cheers!">
             </section>
-
             <!-- Content -->
             <section class="content">
                 <h2>Cheers!</h2>
@@ -93,16 +83,12 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </section>
-
         </div>
-
     </div>
 
     <div class="section-three">
-
         <div class="flex-container wrapper">
-
-            <!-- Content -->
+            <!-- Feature -->
             <section class="features">
                 <div class="brand-icons">
                     <i class="fas fa-whale" style="color: #000;"></i>
@@ -113,39 +99,35 @@
                 </p>
             </section>
 
-            <!-- Content -->
+            <!-- Feature -->
             <section class="features">
                 <div class="brand-icons">
-                    <i class="fab fa-airbnb" style="color: #ff5a5f;"></i>
-                    <h2>Airbnb</h2>
+                    <i class="fas fa-water" style="color: #00baff;"></i>
+                    <h2>Ocean Cleanup</h2>
                 </div>
                 <p>
                     Lorem ipsum dolor sit amet. Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
             </section>
 
-            <!-- Content -->
+            <!-- Feature -->
             <section class="features">
                 <div class="brand-icons">
-                    <i class="fab fa-apple" style="color: #000;"></i>
-                    <h2>Apple</h2>
+                    <i class="fas fa-handshake-alt"></i>
+                    <h2>Community Building</h2>
                 </div>
                 <p>
                     Lorem ipsum dolor sit amet. Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
             </section>
-
         </div>
-
     </div>
 
-        <!-- Footer -->
-        <footer class="footer">
-            <h6>Copyright © 2020 Pacific Treasure</h6>
-        </footer>
+    <!-- Footer -->
+    <footer class="footer">
+        <h6>Copyright © 2020 Pacific Treasure</h6>
+    </footer>
 
-
-        <script src="main.js"></script>
 </body>
 
 </html>
