--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <!-- Hero -->
             <div class="hero wrapper">
                 <div class="hero-text">
-                    <h1>Innovative and sustainable solutions for our Pacific Ocean.</h1> 
+                    <h1>Innovative and sustainable solutions for the Pacific Ocean.</h1> 
                     <p class="intro">Because the ocean needs all of our passion and resources.</p>   
                     <p>
                         The Pacific Treasure Foundation lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, distinctio. Eius blanditiis modi nesciunt expedita. Perferendis blanditiis aliquam sequi repellendus, dolore itaque magnam vel cupiditate sunt ab maxime illum quae.
