--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 
             <!-- Content -->
             <section class="content" id="services">
-                <h2>Fighting to keep our oceans clean.</h2>
+                <h2>Working to keep our oceans clean.</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Plastic accumulating in our oceans and on our beaches has become a global crisis. Billions of pounds of plastic can be found in swirling convergences that make up about 40 percent of the world's ocean surfaces. At current rates plastic is expected to outweigh all the fish in the sea by 2050.
                 </p>
             </section>
         </div>
@@ -74,11 +74,11 @@
         <div class="flex-container wrapper">  
             <!-- Image -->
             <section class="sidebar">
-                <img class="covid" src="assets/trash.svg" alt="Cheers!">
+                <img class="covid" src="assets/turtle.png" alt="Cheers!">
             </section>
             <!-- Content -->
             <section class="content">
-                <h2>Cheers!</h2>
+                <h2>Marine-life research</h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
